# excellent

./: .gitignore  EULA  Excellent-sidebar.spec  Excellent-topbar.spec  ExcellentMVP.spec  ExcellentMVP_Finans.spec  Jenkinsfile  PRD.md  PROJE_MIMARISI.md  PROJE_PLANI.md  README.md  app_icon.icns  backend.py  backup.py  db.py  excellent_mvp.db  flet_front.py  fromqr.py  frontend.py  imports.py  invoices.py  notes_mult.db  project_charter.txt  qr.py  qr_fast.py  qr_optimized.py  requirements.txt  toexcel.py  topdf.py  vs.md
.github/workflows/: build.yml
Markdowns/: BASIT_MIMARI.md  BUILD_MACOS.md  TEKNOLOJI_STACK.md
PythonFiles/: backend.py  backup.py  fromqr.py  frontend-sidebar.py  frontend-topbar.py  frontend.py  imports.py  invoices.py  locales.py  rust_db.py  rust_qr.py  toexcel.py  topdf.py
Tests/: tests.py  tests_gui.py
rust_db/: Cargo.toml  pyproject.toml
rust_db/src/: lib.rs
rust_qr/: Cargo.toml  pyproject.toml
rust_qr/src/: lib.rs
