[package]
name = "rust_qr"  # Python'da import ederken kullanacağın isim
version = "1.1.0"
edition = "2024"

[lib]
name = "rust_qr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
rxing = "0.8.3"                                              # QR okuma
image = "0.25"                                               # Resim işleme
